Optionally, use internal code for SVN syncs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,6 +108,7 @@ endif()
 
 option(SIMGEAR_HEADLESS "Set to ON to build SimGear without GUI/graphics support" OFF)
 option(JPEG_FACTORY     "Enable JPEG-factory support" OFF)
+option(SG_SVN_CLIENT    "Set to ON to build SimGear with built-in SVN support" OFF)
 option(ENABLE_LIBSVN    "Set to ON to build SimGear with libsvnclient support" ON)
 option(ENABLE_RTI       "Set to ON to build SimGear with RTI support" OFF)
 option(ENABLE_TESTS     "Set to OFF to disable building SimGear's test applications" ON)
@@ -193,7 +194,9 @@ else()
     message(STATUS "JPEG-factory: DISABLED")
 endif(JPEG_FACTORY)
 
-if(ENABLE_LIBSVN)
+if (SG_SVN_CLIENT)
+    message(STATUS "Using built-in subversion client code")
+elseif(ENABLE_LIBSVN)
     find_package(SvnClient)
 
     if(LIBSVN_FOUND)
@@ -208,7 +211,7 @@ if(ENABLE_LIBSVN)
     endif(LIBSVN_FOUND)
 else()
     message(STATUS "Subversion client support: DISABLED")
-endif(ENABLE_LIBSVN)
+endif(SG_SVN_CLIENT)
 
 find_package(ZLIB REQUIRED)
 find_package(Threads REQUIRED)
