Use TEST_LIBS to include all libraries needed (on Mac)

--- a/simgear/package/CMakeLists.txt
+++ b/simgear/package/CMakeLists.txt
@@ -22,20 +22,8 @@ set(SOURCES
 
 simgear_component(package package "${SOURCES}" "${HEADERS}")
 
-if (SIMGEAR_SHARED)
-    set(APP_LIBS SimGearCore)
-else()
-    set(APP_LIBS
-        SimGearCore
-        ${CMAKE_THREAD_LIBS_INIT}
-        ${WINSOCK_LIBRARY}
-        ${ZLIB_LIBRARY}
-        ${RT_LIBRARY}
-    )
-endif()
-
 add_executable(sg_pkgutil pkgutil.cxx)
-target_link_libraries(sg_pkgutil ${APP_LIBS})
+target_link_libraries(sg_pkgutil ${TEST_LIBS})
 
 if(ENABLE_TESTS)
 
