Comment out Cmake export experiments for now.
This is breaking CMake 2.6, so commenting out for the moment, until
I understand how to support this portably.

--- a/simgear/CMakeLists.txt
+++ b/simgear/CMakeLists.txt
@@ -63,8 +63,8 @@ if(SIMGEAR_SHARED)
         set_property(TARGET SimGearScene PROPERTY VERSION   ${SIMGEAR_VERSION})
         set_property(TARGET SimGearScene PROPERTY SOVERSION ${SIMGEAR_SOVERSION})
 
-        install(TARGETS SimGearScene EXPORT SimGearSceneConfig LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} )
-        install(EXPORT SimGearSceneConfig DESTINATION share/SimGearScene)
+    #    install(TARGETS SimGearScene EXPORT SimGearSceneConfig LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} )
+    #    install(EXPORT SimGearSceneConfig DESTINATION share/SimGearScene)
     endif()
     
 else()
