Add ListDiff helper (for fast array differences).

--- a/simgear/misc/CMakeLists.txt
+++ b/simgear/misc/CMakeLists.txt
@@ -3,6 +3,7 @@ include (SimGearComponent)
 
 set(HEADERS 
     CSSBorder.hxx
+    ListDiff.hxx
     ResourceManager.hxx
     interpolator.hxx
     make_new.hxx
