Apple directory helpers
- drop use of deprecated FSFindFolder (use NSFileManager)
- support Downloads and Pictures directories

--- a/simgear/misc/CMakeLists.txt
+++ b/simgear/misc/CMakeLists.txt
@@ -33,6 +33,10 @@ set(SOURCES
     gzcontainerfile.cxx
     )
 
+if (APPLE)
+    list(APPEND SOURCES CocoaHelpers.mm)
+endif()
+
 simgear_component(misc misc "${SOURCES}" "${HEADERS}")
 
 if(ENABLE_TESTS)
