--- a/simgear/misc/CMakeLists.txt
+++ b/simgear/misc/CMakeLists.txt
@@ -5,6 +5,7 @@ set(HEADERS
     CSSBorder.hxx
     ListDiff.hxx
     ResourceManager.hxx
+    SimpleMarkdown.hxx
     SVGpreserveAspectRatio.hxx
     interpolator.hxx
     make_new.hxx
@@ -23,6 +24,7 @@ set(HEADERS
 set(SOURCES
     CSSBorder.cxx
     ResourceManager.cxx
+    SimpleMarkdown.cxx
     SVGpreserveAspectRatio.cxx
     interpolator.cxx
     sg_dir.cxx
@@ -64,6 +66,11 @@ add_test(path ${EXECUTABLE_OUTPUT_PATH}/test_path)
 target_link_libraries(test_path ${TEST_LIBS})
 
 endif(ENABLE_TESTS)
+
+add_boost_test(SimpleMarkdown
+  SOURCES SimpleMarkdown_test.cxx
+  LIBRARIES ${TEST_LIBS}
+)
 
 add_boost_test(SVGpreserveAspectRatio
   SOURCES SVGpreserveAspectRatio_test.cxx
