Nasal: fix parsing octal/hex numbers in strings as well as during lexing.
Parse the same number formats (octal, dec, hex) in literals and tokens. Was
previously quite a mess, and is still not the best solution, as lexing and
string parsing uses different implementations, although they are meant to
do exactly the same conversions.

--- a/simgear/nasal/cppbind/CMakeLists.txt
+++ b/simgear/nasal/cppbind/CMakeLists.txt
@@ -41,3 +41,8 @@ add_boost_test(cppbind_ghost
   SOURCES cppbind_test_ghost.cxx
   LIBRARIES ${TEST_LIBS}
 )
+
+add_boost_test(nasal_num
+  SOURCES nasal_num_test.cxx
+  LIBRARIES ${TEST_LIBS}
+)
