Add simple keyboard event demo application.

--- a/simgear/canvas/events/CMakeLists.txt
+++ b/simgear/canvas/events/CMakeLists.txt
@@ -20,3 +20,9 @@ add_boost_test(canvas_event
   SOURCES event_test.cpp
   LIBRARIES ${TEST_LIBS}
 )
+
+add_executable(input_event_demo input_event_demo.cxx)
+target_link_libraries(input_event_demo
+  ${TEST_LIBS}
+  ${OPENSCENEGRAPH_LIBRARIES}
+)
