Nasal: add an naRef to ghosts to allow for proper gc of dependent objects/ghosts.
This allows for binding the lifetime of any nasal object to
the lifetime of a ghost. Otherwise circular references from
objects saved within the ghost would prevent the ghost from
being garbage collected.

--- a/simgear/nasal/cppbind/CMakeLists.txt
+++ b/simgear/nasal/cppbind/CMakeLists.txt
@@ -35,16 +35,21 @@ simgear_component(nasal/cppbind nasal/cppbind "${SOURCES}" "${HEADERS}")
 simgear_component(nasal/cppbind/detail nasal/cppbind/detail "" "${DETAIL_HEADERS}")
 
 add_boost_test(cppbind_ghost
-  SOURCES cppbind_test_ghost.cxx
+  SOURCES test/cppbind_test_ghost.cxx
   LIBRARIES ${TEST_LIBS}
 )
 
 add_boost_test(cppbind_misc
-  SOURCES cppbind_test.cxx
+  SOURCES test/cppbind_test.cxx
+  LIBRARIES ${TEST_LIBS}
+)
+
+add_boost_test(nasal_gc_test
+  SOURCES test/nasal_gc_test.cxx
   LIBRARIES ${TEST_LIBS}
 )
 
 add_boost_test(nasal_num
-  SOURCES nasal_num_test.cxx
+  SOURCES test/nasal_num_test.cxx
   LIBRARIES ${TEST_LIBS}
 )
