memory reduced tile loading. - do not save the TileGeometryBin and matcach in the randomObjectCallback - recreate matcache, and get TileGeometry from scenegraph - split obj.cxx into three distinct files - loadBTG, load surface geometry, and load tile details - includes fix for sceneries that have missing materials

--- a/simgear/scene/tgdb/CMakeLists.txt
+++ b/simgear/scene/tgdb/CMakeLists.txt
@@ -8,9 +8,12 @@ set(HEADERS
     SGDirectionalLightBin.hxx
     SGLightBin.hxx
     SGModelBin.hxx
+    SGNodeTriangles.hxx
     SGOceanTile.hxx
     SGReaderWriterBTG.hxx
     SGTexturedTriangleBin.hxx
+    SGTileDetailsCallback.hxx
+    SGTileGeometryBin.hxx
     SGTriangleBin.hxx
     SGVasiDrawable.hxx
     SGVertexArrayBin.hxx
